Refactor ProductService to use Arrays.asList